--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,9 +12,11 @@
     },
     "dependencies": {
         "@headlessui/react": "^2.2.0",
+        "@heroicons/react": "^2.2.0",
         "@tanstack/react-query": "^5.68.0",
         "axios": "^1.8.3",
-        "next": "15.2.2",
+        "js-cookie": "^3.0.5",
+        "next": "^15.2.2",
         "next-auth": "^4.24.11",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
@@ -25,7 +27,7 @@
         "@eslint/eslintrc": "^3",
         "@tailwindcss/postcss": "^4",
         "@types/node": "^20",
-        "@types/react": "^19",
+        "@types/react": "^19.0.10",
         "@types/react-dom": "^19",
         "eslint": "^9.22.0",
         "eslint-config-next": "15.2.2",
@@ -34,7 +36,7 @@
         "husky": "^8.0.3",
         "lint-staged": "^15.5.0",
         "prettier": "^3.5.3",
-        "tailwindcss": "^4",
+        "tailwindcss": "^4.0.14",
         "typescript": "^5"
     },
     "lint-staged": {
