--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,11 +13,14 @@
     "dependencies": {
         "@headlessui/react": "^2.2.0",
         "@heroicons/react": "^2.2.0",
+        "@hookform/resolvers": "^4.1.3",
         "@tanstack/react-query": "^5.68.0",
+        "autoprefixer": "^10.4.21",
         "axios": "^1.8.3",
         "js-cookie": "^3.0.5",
         "next": "^15.2.2",
         "next-auth": "^4.24.11",
+        "postcss": "^8.5.3",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
         "react-hook-form": "^7.54.2",
@@ -25,10 +28,11 @@
     },
     "devDependencies": {
         "@eslint/eslintrc": "^3",
-        "@tailwindcss/postcss": "^4",
+        "@tailwindcss/postcss": "^4.0.14",
+        "@types/js-cookie": "^3.0.6",
         "@types/node": "^20",
         "@types/react": "^19.0.10",
-        "@types/react-dom": "^19",
+        "@types/react-dom": "^19.0.4",
         "eslint": "^9.22.0",
         "eslint-config-next": "15.2.2",
         "eslint-config-prettier": "^10.1.1",
