--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,42 +6,48 @@
         "dev": "next dev",
         "build": "next build",
         "start": "next start",
-        "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
-        "format": "prettier --write .",
+        "lint": "next lint",
         "prepare": "husky install"
     },
     "dependencies": {
         "@headlessui/react": "^2.2.0",
         "@heroicons/react": "^2.2.0",
         "@hookform/resolvers": "^4.1.3",
-        "@tanstack/react-query": "^5.68.0",
-        "autoprefixer": "^10.4.21",
-        "axios": "^1.8.3",
+        "@tanstack/react-query": "^5.67.1",
+        "axios": "^1.8.1",
+        "flowbite": "^3.1.2",
+        "flowbite-react": "^0.10.2",
         "js-cookie": "^3.0.5",
-        "next": "^15.2.2",
+        "jsonwebtoken": "^9.0.2",
+        "next": "15.2.1",
         "next-auth": "^4.24.11",
-        "postcss": "^8.5.3",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
-        "react-hook-form": "^7.54.2",
+        "react-hook-form-resolvers": "^0.0.1",
         "zod": "^3.24.2"
     },
     "devDependencies": {
         "@eslint/eslintrc": "^3",
-        "@tailwindcss/postcss": "^4.0.14",
+        "@eslint/js": "^9.21.0",
+        "@next/eslint-plugin-next": "^15.1.7",
         "@types/js-cookie": "^3.0.6",
         "@types/node": "^20",
-        "@types/react": "^19.0.10",
-        "@types/react-dom": "^19.0.4",
-        "eslint": "^9.22.0",
-        "eslint-config-next": "15.2.2",
-        "eslint-config-prettier": "^10.1.1",
+        "@types/react": "^19",
+        "@types/react-dom": "^19",
+        "autoprefixer": "^10.4.21",
+        "eslint": "^9.21.0",
+        "eslint-config-next": "^15.2.1",
+        "eslint-config-prettier": "^10.0.2",
         "eslint-plugin-prettier": "^5.2.3",
-        "husky": "^8.0.3",
-        "lint-staged": "^15.5.0",
-        "prettier": "^3.5.3",
-        "tailwindcss": "^4.0.14",
-        "typescript": "^5"
+        "eslint-plugin-react": "^7.37.4",
+        "globals": "^16.0.0",
+        "husky": "^8.0.0",
+        "lint-staged": "^15.4.3",
+        "postcss": "^8.5.3",
+        "prettier": "^3.5.2",
+        "tailwindcss": "^3.4.17",
+        "typescript": "^5",
+        "typescript-eslint": "^8.26.0"
     },
     "lint-staged": {
         "*.{js,jsx,ts,tsx}": [
