--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,8 @@
         "@eslint/eslintrc": "^3",
         "@eslint/js": "^9.21.0",
         "@next/eslint-plugin-next": "^15.1.7",
+        "@testing-library/jest-dom": "^6.6.3",
+        "@testing-library/react": "^16.2.0",
         "@types/js-cookie": "^3.0.6",
         "@types/node": "^20",
         "@types/react": "^19",
@@ -44,6 +46,7 @@
         "eslint-plugin-react": "^7.37.4",
         "globals": "^16.0.0",
         "husky": "^8.0.0",
+        "jest": "^29.7.0",
         "lint-staged": "^15.4.3",
         "postcss": "^8.5.3",
         "prettier": "^3.5.2",
